--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
